--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ disqus:
 
 # Author information - author info at the bottom of the post
 author_name: "jooojub"
-author_bio: "jooojub is an ordinary system s/w engineer. Specifically, linux kernel, u-boot, systemd, tizen, etc..."
+author_bio: "jooojub is a system s/w engineer. That's it"
 author_url:  "http://jooojub.github.io"
 author_location: "Korea, Suwon"
 author_image: /images/authorimage.png
