--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@
 title: "jooojub"
 
 # A description of your site for social meta tag, search engines, and feed.xml
-description: "Think deeply..."
+description: "Unkindness pages"
 
 # Tagline near the site title
-tagline: "Think deeply..."
+tagline: "Unkindness pages"
 
 # The subpath of your site, e.g. /blog, for generating urls
 baseurl:
@@ -39,7 +39,7 @@ disqus:
 
 # Author information - author info at the bottom of the post
 author_name: "jooojub"
-author_bio: "jooojub is a system s/w engineer. That's it"
+author_bio: "System s/w engineer. That's it"
 author_url:  "http://jooojub.github.io"
 author_location: "Korea, Suwon"
 author_image: /images/authorimage.png
