style: Add style to more colorful
Signed-off-by: jooojub <jooojub@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ disqus:
 
 # Author information - author info at the bottom of the post
 author_name: "jooojub"
-author_bio: "System s/w engineer. That's it"
+author_bio: "System s/w engineer"
 author_url:  "http://jooojub.github.io"
 author_location: "Korea, Suwon"
 author_image: /images/authorimage.png
