disqus: Add comments
Signed-off-by: jooojub <jooojub@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ navigation:
   url: /coding-style/
 
 # The shortname for your Disqus site to enable comments.
-disqus:
+disqus: jooojub
 
 # Author information - author info at the bottom of the post
 author_name: "jooojub"
