--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hover.css": "^2.3.2",
     "mdbreact": "^5.0.2",
     "node-sass": "^6.0.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
