--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "disqus-react": "^1.1.2",
     "highlight.js": "^11.2.0",
     "hover.css": "^2.3.2",
     "mdbreact": "^5.0.2",
