--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "disqus-react": "^1.1.2",
     "highlight.js": "^11.2.0",
     "hover.css": "^2.3.2",
+    "marked": "^3.0.4",
     "mdbreact": "^5.0.2",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
