--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
     "disqus-react": "^1.1.2",
+    "gh-pages": "^3.2.3",
     "highlight.js": "^11.2.0",
     "hover.css": "^2.3.2",
     "marked": "^3.0.4",
@@ -34,7 +35,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "post_build": "node ./tools/postParser.js"
+    "post_build": "node ./tools/postParser.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -53,5 +56,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://jooojub.github.io/"
 }
